[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/LabelButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://fonts/m3x6.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/MenuBlock.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/TitleBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/MenuHole.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("MenuBlock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 279, 787 ), Vector2( 279, 787 ), Vector2( 279, 357 ), Vector2( 279, 387 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.666667 ), Color( 1, 1, 1, 0.333333 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MenuBlock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 279, 387 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="TitleBackground" parent="." instance=ExtResource( 6 )]

[node name="VersionContainer" type="Node2D" parent="."]
position = Vector2( 774, 684 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="VersionContainer"]
margin_right = 86.0
margin_bottom = 14.0
grow_horizontal = 0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Current version: v"
align = 2

[node name="AuthorContainer" type="Node2D" parent="."]
position = Vector2( 18, 684 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="AuthorContainer"]
margin_right = 97.0
margin_bottom = 14.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "A game by JÃ©eremy Morel"

[node name="Title" type="Node2D" parent="."]
position = Vector2( 100, 45 )

[node name="Label" type="Label" parent="Title"]
margin_left = 225.0
margin_top = 90.0
margin_right = 302.0
margin_bottom = 105.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 4 )
text = "Adventure"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Title"]
margin_left = 225.0
margin_top = 135.0
margin_right = 383.0
margin_bottom = 158.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 4 )
text = "in the"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Title"]
margin_left = 90.0
margin_top = 150.0
margin_right = 188.0
margin_bottom = 174.0
rect_scale = Vector2( 6, 6 )
theme = ExtResource( 4 )
text = "Hall of Order"
align = 1
valign = 1

[node name="Back" type="ColorRect" parent="."]
visible = false
margin_right = 960.0
margin_bottom = 720.0
color = Color( 0.141176, 0.192157, 0.215686, 1 )

[node name="MenuBlock" parent="." instance=ExtResource( 5 )]
position = Vector2( 279, 387 )
scale = Vector2( 2, 2 )
size = Vector2( 4.4, 5 )

[node name="MenuHole" parent="MenuBlock" instance=ExtResource( 8 )]
position = Vector2( 4.5, 4.5 )
size = Vector2( 4.2, 4 )

[node name="Buttons" type="Node2D" parent="MenuBlock"]
position = Vector2( 99, 4 )
scale = Vector2( 0.5, 0.5 )

[node name="PlayButton" parent="MenuBlock/Buttons" instance=ExtResource( 1 )]
position = Vector2( 0, 9 )
scale = Vector2( 2, 2 )
buttonScale = 2
buttonLabel = "Play"
enclosed = true

[node name="ProfileButton" parent="MenuBlock/Buttons" instance=ExtResource( 1 )]
position = Vector2( 0, 68 )
scale = Vector2( 2, 2 )
buttonScale = 2
enclosed = true

[node name="OptionsButton" parent="MenuBlock/Buttons" instance=ExtResource( 1 )]
position = Vector2( 0, 127 )
scale = Vector2( 2, 2 )
buttonScale = 2
buttonLabel = "Settings"
enclosed = true

[node name="ExitButton" parent="MenuBlock/Buttons" instance=ExtResource( 1 )]
position = Vector2( 0, 186 )
scale = Vector2( 2, 2 )
buttonScale = 2
buttonLabel = "Exit"
enclosed = true

[node name="ProfileContainer" type="Node2D" parent="MenuBlock"]
position = Vector2( 100.5, 144 )

[node name="Label" type="Label" parent="MenuBlock/ProfileContainer"]
margin_left = -117.0
margin_right = 117.0
margin_bottom = 23.0
theme = ExtResource( 4 )
text = "Profile: 123456789012345"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="MenuBlock/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuBlock/Buttons/ProfileButton" to="." method="_on_ProfileButton_pressed"]
[connection signal="pressed" from="MenuBlock/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MenuBlock/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
